# fastapi_reservations_api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
docker/fastapi/: Dockerfile
docker/mysql/: init.sql
