[tool.poetry]
name = "fastapi-reservations-api"
version = "0.1.0"
description = "Reservations Rest API"
authors = ["Narushevich Maksim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
sqlalchemy = "^2.0.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
